--- a/ui/package.json
+++ b/ui/package.json
@@ -10,9 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.8.1",
     "css-loader": "^0.16.0",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "history": "^1.17.0",
+    "node-sass": "^3.4.2",
+    "qwest": "^3.0.0",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.0.6",
+    "react-router": "^1.0.3",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3"
   },
