--- a/api/package.json
+++ b/api/package.json
@@ -7,14 +7,18 @@
     "watch": "supervisor ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^2.9.34",
     "body-parser": "^1.0.2",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "dotenv": "^1.2.0",
     "express": "~4.2.0",
     "jade": "~1.3.0",
     "lodash": "^3.10.1",
     "morgan": "~1.0.0",
     "multer": "^1.0.3",
+    "s3": "^4.4.0",
+    "slug": "^0.9.1",
     "static-favicon": "~1.0.0"
   }
 }
